# windbg-decompile-ext

./: CMakeLists.txt  README.md  ROADMAP.md  decomp.llm.json.example
include/decomp/: analyzer.h  json.h  llm_client.h  protocol.h  pseudo_tokens.h  string_utils.h  types.h  verifier.h
scripts/: Build-Legacy.ps1  Build.ps1  BuildCommon.ps1  Configure-VisualStudio.ps1  Invoke-ReleaseBuild.ps1  Prepare-DbgengVendor.ps1  Prepare-ZydisVendor.ps1
src/extension/: decomp.def  extension.cpp  llm_client.cpp  version.rc.in
src/shared/: analyzer.cpp  json.cpp  protocol.cpp  pseudo_tokens.cpp  verifier.cpp
